Prevent wrapping of individual date inputs

--- a/packages/foundations-forms/src/forms.pcss
+++ b/packages/foundations-forms/src/forms.pcss
@@ -20,13 +20,20 @@
   }
 }
 
+.coop-form__columns {
+  display: flex;
+  white-space: nowrap;
+  /* removes whitespace caused by inline-block */
+  font-size: 0;
+}
+
 .coop-form__column {
   display: inline-block;
   width: auto;
 }
 
 .coop-form__column + .coop-form__column {
-  margin-left: var(--spacing-8);
+  margin-left: var(--spacing-16);
 }
 
 label,
